--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
  <div class="top card">
-    <a class="email" href="mailto:{{site.email}}">{{site.email}}</a>
+    <a class="email" href="tel:{{site.email}}">{{site.email}}</a>
     <p class="description">{{ site.description }}</p>
     <a href="about" class="btn">Read More</a>
   </div>
